<resources>
    <string name="app_name">Next Move: Chess Scanner</string>
    <string name="scan">Scan</string>
    <string name="getMoves">Get Moves</string>
    <string name="UCImoveInfo">Move</string>
    <string name="scoreInfo">Score</string>
    <string name="winrateInfo">Chance to win</string>
    <string name="noteInfo">Note</string>
    <string name="fen_position">FEN position</string>
    <string name="fieldInfo">Field</string>
    <string name="fieldPhotoInfo">Photo</string>
    <string name="recognizedPieceInfo">Recognized piece</string>
    <string name="confidenceInfo">Confidence</string>
    <string name="blackBishop">Black bishop</string>
    <string name="whiteBishop">White bishop</string>
    <string name="blank">Blank</string>
    <string name="blackKing">Black king</string>
    <string name="whiteKing">White king</string>
    <string name="blackKnight">Black knight</string>
    <string name="whiteKnight">White knight</string>
    <string name="blackPawn">Black pawn</string>
    <string name="whitePawn">White pawn</string>
    <string name="blackQueen">Black queen</string>
    <string name="whiteQueen">White queen</string>
    <string name="blackRook">Black rook</string>
    <string name="whiteRook">White rook</string>
    <string name="canceled">Canceled</string>
    <string name="empty">Empty</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="enterFenNotation">Enter position in FEN notation</string>
    <string name="button_help">Help</string>
    <string name="button_settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choosePhotoSource">Choose Photo Source</string>
    <string name="SANNotationInfoText">Choose notation to describe moves</string>
    <string name="languageText">Choose language of application</string>
    <string name="askWhatColorText">Ask every time what color I am</string>
    <string name="defaultColorText">Default color</string>
    <string name="automaticDetectChessboard">Automatic detect chessboard</string>
    <string name="limitMoves">Limit of displayed moves</string>
    <string name="saveOptions">Save</string>
    <string name="cancelOptions">Cancel</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="optionsUpdatedInfo">(Some options require a restart of the application to be updated)</string>
    <string name="help">Help</string>
    <string name="helpMessage">Next move: Chess scanner\n\n
        1. Click \'Scan\'.\n
        2. Take a photo or choose from gallery.\n
        3. Crop and center chessboard.\n
        4. Click \'Get Moves\' to load moves.\n</string>
    <string name="ok">Ok</string>
    <string name="whatColor">What color do you play?</string>
    <string name="setDefaultColor">The default color has been set</string>
    <string name="setFen">Set FEN:</string>
</resources>