<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                >
                <Button
                    android:id="@+id/chooseLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="5dp"
                    android:text="@string/languageText"
                    />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/SANNotationInfoText"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="UCI"
                android:gravity="right|center_vertical"
                android:layout_margin="5dp"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                >
            <Switch
                android:id="@+id/chooseNotation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="5dp"
                />
            </RelativeLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="SAN"
                android:gravity="left|center_vertical"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/askWhatColorText"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/off"
                android:gravity="right|center_vertical"
                android:layout_margin="5dp"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                >
                <Switch
                    android:id="@+id/askWhatColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="5dp"
                    />
            </RelativeLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/on"
                android:gravity="left|center_vertical"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/defaultColorText"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/white"
                android:gravity="right|center_vertical"
                android:layout_margin="5dp"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                >
                <Switch
                    android:id="@+id/defaultColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="5dp"
                    android:enabled="false"
                    />
            </RelativeLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/black"
                android:gravity="left|center_vertical"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/automaticDetectChessboard"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/off"
                android:gravity="right|center_vertical"
                android:layout_margin="5dp"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                >
                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="5dp"
                    />
            </RelativeLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/on"
                android:gravity="left|center_vertical"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/limitMoves"
            android:gravity="center"/>
        <TextView
            android:id="@+id/limitMovesText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="10"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="1"
                android:gravity="right|center_vertical"
                android:layout_margin="5dp"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                >

                <SeekBar
                    android:id="@+id/limitMovesSeek"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="2dp"
                    android:max="100"
                    android:min="1" />
            </RelativeLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="50"
                android:gravity="left|center_vertical"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/optionsUpdatedInfo"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="5dp">
    <Button
        android:id="@+id/saveOptions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/saveOptions"
        android:layout_weight="1"
        android:layout_margin="5dp"/>
    <Button
        android:id="@+id/cancelOptions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/cancelOptions"
        android:backgroundTint="@color/water_music"
        android:layout_weight="1"
        android:layout_margin="5dp"
/>
</LinearLayout>

</LinearLayout>